--- a/style.css
+++ b/style.css
@@ -1,10 +1,68 @@
 body {
+    font-family: 'Roboto', sans-serif;
+}
 
+ol {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #F9FAF8;
+}
+
+/* Header */
+
+.header-container {
+    background-color: #1F2937;
 }
 
 .header {
 
 }
+
+.header-logo {
+
+}
+
+.header-links {
+
+}
+
+/* Hero & Placeholder */
+
+.hero {
+
+}
+
+.hero-main-text {
+
+}
+
+.hero-secondary-text {
+
+}
+
+.hero-button {
+
+}
+
+.placeholder {
+
+}
+
+/* Information Header */
+
+.info-header {
+
+}
+
+
+
+
+/* Footer */
 
 .footer {
 
