--- a/style.css
+++ b/style.css
@@ -1,56 +1,108 @@
 body {
     font-family: 'Roboto', sans-serif;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 ol {
     list-style: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    gap: 16px;
 }
 
 a {
     text-decoration: none;
-    color: #F9FAF8;
+    color: #E5E7EB;
+}
+
+p {
+    margin: 0;
 }
 
 /* Header */
 
 .header-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
     background-color: #1F2937;
 }
 
-.header {
+.top-content {
+    width: 1100px;
+    padding: 16px;
+    margin-bottom: 125px;
+}
 
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 125px;
+    
 }
 
 .header-logo {
-
+    font-size: 24px;
+    font-weight: 900;
+    color: #F9FAF8;
 }
 
 .header-links {
-
+    font-size: 18px;
 }
 
 /* Hero & Placeholder */
 
 .hero {
+    display: flex;
+    justify-content: space-between;
+}
 
+.modal {
+    height: 230px;
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
 .hero-main-text {
-
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
 }
 
 .hero-secondary-text {
-
+    font-size: 18px;
+    color: #E5E7EB;
+    margin-bottom: 10px;
 }
 
 .hero-button {
-
+    padding: 5px 35px;
+    background-color: #3882F6;
+    border: solid #3882F6;
+    border-radius: 8px;
+    font-size: 18px;
+    color: #F9FAF8;
+    font-weight: 600;
 }
 
 .placeholder {
-
+    color: #E5E7EB;
+    font-size: 18px;
+    height: 230px;
+    width: 500px;
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Information Header */
