--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
 }
 
-ol {
+ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -20,6 +20,10 @@ a {
 }
 
 p {
+    margin: 0;
+}
+
+h2 {
     margin: 0;
 }
 
@@ -43,7 +47,7 @@ p {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 125px;
-    
+
 }
 
 .header-logo {
@@ -107,15 +111,121 @@ p {
 
 /* Information Header */
 
-.info-header {
-
+.info-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+.some-info {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    padding: 50px;
+}
 
+.image-placeholder {
+    display: flex;
+    gap: 60px;
+    margin-bottom: 100px;
+}
 
+.placeholder-container {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    align-items: center;
+    width: 170px;
+}
+
+.info-placeholder {
+    border: 4px solid #3882F6;
+    border-radius: 15px;
+    height: 170px;
+    width: 170px;
+}
+
+.placeholder-text {
+    color: rgb(102, 101, 101);
+    font-size: 18px;
+    text-align: center;
+}
+
+/* Quote */
+
+.quote-container {
+    background-color: #E5E7EB;
+    height: 425px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-author-container {
+    width: 810px;
+}
+
+.quote {
+    color: #1F2937;
+    font-weight: 300;
+    font-style: italic;
+    font-size: 36px;
+}
+
+.author {
+    font-size: 23px;
+    font-weight: 900;
+    text-align: right;
+}
+
+/* Second Modal */
+
+.second-modal {
+    background-color: #3882F6;
+    border-radius: 8px;
+    height: 150px;
+    width: 1050px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 200px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.call-to-action-container {}
+
+.call-to-action {
+    font-size: 25px;
+    font-weight: 600;
+    color: white;
+}
+
+.call-to-action-text {
+    color: #F9FAF8;
+    font-size: 18px;
+}
+
+.modal-button {
+    padding: 5px 35px;
+    background-color: #3882F6;
+    border: 2px solid white;
+    border-radius: 8px;
+    font-size: 18px;
+    color: #F9FAF8;
+    font-weight: 600;
+}
 
 /* Footer */
 
 .footer {
-
+    font-size: 19px;
+    color: #E5E7EB;
+    background-color: #1F2937;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 40px;
+    box-sizing: border-box;
 }
