--- a/style.css
+++ b/style.css
@@ -30,24 +30,21 @@ h2 {
 /* Header */
 
 .header-container {
+    background-color: #1F2937;
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: #1F2937;
-}
-
-.top-content {
-    width: 1100px;
-    padding: 16px;
-    margin-bottom: 125px;
+    position: fixed;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
-    margin-bottom: 125px;
-
+    background-color: #1F2937;
+    width: 1000px;
+    padding: 25px;
 }
 
 .header-logo {
@@ -62,18 +59,29 @@ h2 {
 
 /* Hero & Placeholder */
 
+.hero-container {
+    width: 100%;
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+}
+
 .hero {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    margin-top: 160px;
+    margin-bottom: 125px;
+    padding: 16px;
+    width: 1000px;
 }
 
 .modal {
-    height: 230px;
-    width: 450px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    flex:0 1 450px;
 }
 
 .hero-main-text {
@@ -85,7 +93,6 @@ h2 {
 .hero-secondary-text {
     font-size: 18px;
     color: #E5E7EB;
-    margin-bottom: 10px;
 }
 
 .hero-button {
@@ -99,15 +106,21 @@ h2 {
 }
 
 .placeholder {
-    color: #E5E7EB;
-    font-size: 18px;
-    height: 230px;
-    width: 500px;
-    background-color: gray;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex:0 1 500px;
+    margin-top: 16px;
 }
+
+.image {
+    height: 250px;
+    width: 100%;
+    background-image: url(./images/pexels-pixabay-50577.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
 
 /* Information Header */
 
@@ -115,6 +128,7 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 16px;
 }
 
 .some-info {
@@ -126,6 +140,7 @@ h2 {
 
 .image-placeholder {
     display: flex;
+    flex-wrap: wrap;
     gap: 60px;
     margin-bottom: 100px;
 }
@@ -160,6 +175,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: ;
 }
 
 .quote-author-container {
@@ -181,20 +197,32 @@ h2 {
 
 /* Second Modal */
 
-.second-modal {
-    background-color: #3882F6;
-    border-radius: 8px;
-    height: 150px;
-    width: 1050px;
+.modal-2-container {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 200px;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    padding: 16px;
+    box-sizing: border-box;
 }
 
-.call-to-action-container {}
+.second-modal {
+    background-color: #3882F6;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    flex-wrap: wrap;
+    width: 800px;
+    padding: 30px 80px;
+
+}
+
+.second-modal, .main {
+    justify-content: space-between;
+}
 
 .call-to-action {
     font-size: 25px;
@@ -215,6 +243,8 @@ h2 {
     font-size: 18px;
     color: #F9FAF8;
     font-weight: 600;
+    display: flex;
+    flex-shrink: 0;
 }
 
 /* Footer */
