--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h2 {
     flex-wrap: wrap;
     align-items: center;
     background-color: #1F2937;
-    width: 1000px;
+    width: 1100px;
     padding: 25px;
 }
 
@@ -70,29 +70,29 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 160px;
-    margin-bottom: 125px;
-    padding: 16px;
-    width: 1000px;
+    margin-top: 100px;
+    padding: 100px 0 100px;
+    width: 1100px;
 }
 
 .modal {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-evenly;
-    flex:0 1 450px;
+    max-width: 425px;
 }
 
 .hero-main-text {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
+    margin-bottom: 8px;
 }
 
 .hero-secondary-text {
     font-size: 18px;
     color: #E5E7EB;
+    margin-bottom: 16px;
 }
 
 .hero-button {
@@ -103,21 +103,16 @@ h2 {
     font-size: 18px;
     color: #F9FAF8;
     font-weight: 600;
+    margin-bottom: 16px;
 }
 
 .placeholder {
-    display: flex;
-    flex:0 1 500px;
-    margin-top: 16px;
+    max-width: 500px;
 }
 
 .image {
-    height: 250px;
-    width: 100%;
-    background-image: url(./images/pexels-pixabay-50577.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    height: auto;
+    max-width: 100%;
 }
 
 
